CKA-Exam/Security/image-security-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx 
    image: private-registry.io/apps/internal-app
  imagePullSecrets:
  - name: regcred
